Bug 39015 - Hard to select a hyperlink; instead, it enters drag-and-drop mode (comment 14)
Summary: Hard to select a hyperlink; instead, it enters drag-and-drop mode (comment 14)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
: 105306 (view as bug list)
Depends on:
Blocks: Hyperlink Selection Drag-and-Drop
  Show dependency treegraph
 
Reported: 2011-07-06 14:13 UTC by Dan Essin
Modified: 2025-11-14 17:03 UTC (History)
12 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen capture of problem (701.84 KB, video/mp4)
2011-07-07 13:02 UTC, Dan Essin
Details
simple sample ODT with hyperlink (11.21 KB, application/vnd.oasis.opendocument.text)
2023-10-21 06:38 UTC, stragu
Details
Screencast LibreOffice vs. MSO (1.27 MB, image/gif)
2023-10-23 07:42 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Essin 2011-07-06 14:13:49 UTC
If you select text by starting at the end of the desired selection and dragging toward the beginning it works.

If you start selecting text at the beginning of a line, as soon as you start to drag toward the end to define the selection, it instead, picks up the first word of the line and moves it as you drag.
Comment 1 Rainer Bielefeld Retired 2011-07-07 01:37:37 UTC
NOT reproducible with "LibreOffice 3.4.1RC1 - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:103)]", may be I don't understand the problem?

@reporter:
May I ask you to read  hints on <http://wiki.documentfoundation.org/BugReport> carefully?
Then please:
- Write a meaningful Summary
- Attach a sample document 
- Attach screenshots with comments (you can add information using LibO DRAW
  and then attach your screenshot with comments as PDF) if necessary
- Contribute a step by step instruction containing every key press and every 
  mouse click how to reproduce your problem
- add information 
  -- what exactly is unexpected
  -- and why do you believe it's unexpected
  -- concerning your PC 
  -- concerning your OS (exact version)
  -- concerning your LibO localization (UI language)
  –- Libo settings that might be related to your problems 
    (video hardware acceleration ...)
  -- how you launch LibO and how you opened the sample document
  -- everything else crossing your mind after you read a.m. URL

An as an example for a bug report how it should be please see my Comment 2 in
"Bug 35933 - Spreadsheet prints unnecessary blank last page"

Can you please file Bug reports with status UNCONFIRMED if your are not absolutely sure that you contributed all required background information and that the problem will be reproducible with information you can provide? Thank you!
Comment 2 Dan Essin 2011-07-07 10:58:30 UTC
I don't quite know what to say. The problem that I was attempting tp describe has happened on a number of occasions but now that you have asked me to provide a more detailed description I tried again today. Today the problem did not occur. I guess that I will have to wait until it happens again and try to do a screen capture at that time.

Is it possible to suspend this so that I can reactivate it when I have additional information?

Thank you
Comment 3 Rainer Bielefeld Retired 2011-07-07 11:03:08 UTC
WFM due to reporter's comments

@reporter:
Yes, of course!
Please feel free to reopen this bug if you find out that the problem still exists with the current stable LibreOffice version and if you can contribute requested additional information.
Comment 4 Dan Essin 2011-07-07 13:02:52 UTC
Created attachment 48864 [details]
Screen capture of problem
Comment 5 Rainer Bielefeld Retired 2011-07-07 22:46:11 UTC
I also see that behavior from time to time (1 / 10000 or so), but I never was able to reproduce it. 

May be wh have 2 problems:
A. Can not select normal text, text will be moved or ignored instead of selected
B. Can not select text with hyperlink, text will be moved or ignored instead of selected

Steps how to reproduce "A"
1.Open attached "sample.odt
2. move cursor pointer to blank in hyperlink between "Sit" and "Amet"
3. click, leave mouse button pushed, move cursor until end of "Amet"
  Expected: "Amet" should become marked
  Actual: caret moves with mouse pointer until end of word

I am pretty sure that this problem is at least similar to reporter's, in the movie I saw the "link tooltip" before he started to try to select the text with the link.

I believe I also found a possibility how to reproduce "B" 

11. Click in fourth line on blank between "mi" and "vulputate", so that 
    caret flashes between "vulputate" and blank
12. right click for context menu
13. move mouse pointer few (2) millimeters up 
14. right click, so that context menu disappears, but caret still 
    flashes between "vulputate" and blank
15. click directly in front of first word of line "eleifend"
16. Leave left mouse button pushed and drag down
    expected: line will be selected if mouse pointer reaches next line
    actual: in app. 10% of attempts caret follows mouse pointer without 
            highlighting / selection

I can't tell whether steps 11 ... 14 really have to do with the effect or are simple superstition.

@Dan:
Can you confirm my observations and may be contribute additional information?

@Cristoph:
Is there any manual with details how this selection should work?
Comment 6 Christoph 2011-07-10 14:50:44 UTC
(In reply to comment #5)

@ Rainer: The test document is missing, but I tried to reproduce with the given descriptions.

> Steps how to reproduce "A"
> 1.Open attached "sample.odt
> 2. move cursor pointer to blank in hyperlink between "Sit" and "Amet"
> 3. click, leave mouse button pushed, move cursor until end of "Amet"
>   Expected: "Amet" should become marked
>   Actual: caret moves with mouse pointer until end of word

It seems that Writer wants to "protect" that hyperlinks get "sliced" due to mouse actions. So the hyperlink is treated as a continuous object instead of single characters / words.

The behavior itself is acceptable (to not select individual words), but the selection should reflect that - in our case, the full hyperlink should get selected before/during the move of the content. I hope this description can be understood.
 
> I believe I also found a possibility how to reproduce "B" 
[...]

Sorry, unable to reproduce.

> @Cristoph:
> Is there any manual with details how this selection should work?

I had a quick look, but did not find anything related ... the "truth" seems to be in the code :-)
Comment 7 ign_christian 2013-07-01 03:54:30 UTC
*** Bug 46710 has been marked as a duplicate of this bug. ***
Comment 8 Joel Madero 2014-11-06 22:07:04 UTC
Seems confirmed - moving to NEW.
Comment 9 QA Administrators 2015-12-20 16:05:22 UTC Comment hidden (obsolete)
Comment 10 QA Administrators 2017-01-03 19:45:50 UTC Comment hidden (obsolete)
Comment 11 Rpnpif 2017-01-04 14:37:43 UTC
If I understand rightly this issue, it is yet existing with LO 5.2.4.2.
Comment 12 Su Ming Wei 2018-11-29 09:45:10 UTC
Bug Still exists in 
Version: 6.3.0.0.alpha0+ (x64)
Build ID: 0f25a3c36f27fd51453b9a9115f236b83c143684
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-27_20:06:55
Locale: zh-TW (zh_TW); UI-Language: en-US
Calc: threaded

I can select hyperlink text from the begining or the end. However , when I want to select from the middele text of hyperlink , it will become moving the whole hyperlink.
Comment 13 QA Administrators 2019-11-30 03:39:46 UTC Comment hidden (obsolete)
Comment 14 Timur 2021-08-17 09:08:02 UTC
This was slim report, with a problem user (Dan and Su and Rpn from duplicated bug) encountered at, while bug needs detailed report and Experienced and Expected steps. 

There's video attachment 48864 [details] without sample document, comment 5 with steps without sample document, clear bug 46710 but too simple, single word in link.
So I focus on link. 

I don't see bug here. 
User can always select link as text starting from space before or after. For one-word link as in bug 46710 selection is even easier, just double click with mouse. Or user can start with double click to select single word in a link and proceed back or forth to select what desired. 
If selection is started from (the middle of) link itself, it's considered and object and it's useful for moving. 

I see that MSO behavior is different from LO and is as expected here: link can be selected from the middle, selection is extended to the whole link and can be continued further. 
I'm very much in favor of emulating all useful solutions from MSO. But I don't see a problem nor a value in change here. 

If someone disagrees, feel free to set New again, with exact Experienced and Expected steps, with sample document.
Comment 15 stragu 2023-10-21 06:33:58 UTC
Thanks everyone, and Timur especially for clarifying.

I've changed the summary to be more descriptive of the issue.

As I was looking into this area, and seeing a couple of duplicate, I'm setting to "new" again to check with the UX/Design team what their opinion is.

My questions to the team:
1. should this inherited feature remain, i.e. the dragging of whole hyperlink instead of the drag-and-drop selection of part of it?
2. should we offer an option to deactivate it, given that several users are confused by it / think it's a bug / don't like it?
3. if we offer an option, which should be the default?

App comparison:

Google Sheets, OnlyOffice, MS 365, Calligra Words and even Collabora Online _all_ have drag-selection of part of a hyperlink as the default, just like normal text

Happy to set this back to "not a bug" and open a new enhancement request if that's what the team prefers.

Keep in mind: please test with a VCL plugin that is _not GTK_ as there is some inconsistency there. (Selection of part of hyperlink sometimes _does_ work.)
Comment 16 stragu 2023-10-21 06:34:54 UTC
*** Bug 72266 has been marked as a duplicate of this bug. ***
Comment 17 stragu 2023-10-21 06:35:31 UTC
*** Bug 82700 has been marked as a duplicate of this bug. ***
Comment 18 stragu 2023-10-21 06:38:13 UTC
Created attachment 190359 [details]
simple sample ODT with hyperlink

(don't test with gtk VCL plugin)
Comment 19 stragu 2023-10-21 07:11:59 UTC
(In reply to Stéphane Guillou (stragu) from comment #18)
> (don't test with gtk VCL plugin)
gtk issue reported in bug 157871.
Comment 20 stragu 2023-10-22 07:50:59 UTC
*** Bug 105306 has been marked as a duplicate of this bug. ***
Comment 21 Heiko Tietze 2023-10-23 07:42:53 UTC
Created attachment 190379 [details]
Screencast LibreOffice vs. MSO

LibreOffice does not select when starting at exactly the beginning or end of a hyperlink, but moves the entire hyperlink to a new position. That's clearly wrong (although moving the hyperlink is easier).

MSO allows to select from the beginning, end, or even in the middle of the hyperlink - likewise on any other text. When starting with some character before or after, the selection automatically extends to include the whole link text. Makes the function quite flexible but is a bit of challenge for the user. 

Using the keyboard in LibreOffice works more or less exactly as requested.
Comment 22 QA Administrators 2025-10-23 03:13:56 UTC Comment hidden (obsolete)
Comment 23 Justin L 2025-10-25 21:14:08 UTC
I assume this is slightly better since 24.8. If you start start in the last-half of the space before the hyperlink, you can select only the hyperlink.
Comment 24 Justin L 2025-10-28 02:23:44 UTC
This is related to vcl/source/window/dndlistenercontainer.cxx fireDragGestureEvent. In gtk3, sometimes IsMinMove is hit before the DragGesture event is fired. In that case SttSelect starts the drag-selection and then it is too late for the drag and drop to kick in.

The likely explanation is in bug 116384 comment 10, which ought to have improved this bug report as well - in 7.1.4.

If important enough, we could use the first-half character and last-half-character, to trigger a select rather than a move. Hacky, but it would work.
See for example https://gerrit.libreoffice.org/c/core/+/193064
Comment 25 Heiko Tietze 2025-10-28 07:00:49 UTC
(In reply to Justin L from comment #24)
> See for example https://gerrit.libreoffice.org/c/core/+/193064

This changes make selection in hyperlinks like any other text. On top of the solved issue you can delete parts of the text now without going into the link dialog. More comments on Gerrit.
Comment 26 Justin L 2025-11-01 12:54:07 UTC
(In reply to Heiko Tietze from comment #25)
> This changes make selection in hyperlinks like any other text. 
Not really. It only changes if you start selection at the very beginning or end of the hyperlink - not somewhere in the middle.
Comment 27 Commit Notification 2025-11-14 16:32:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8da7c8f01beb71e233622b748867b725b7e8caee

tdf#39015 sw: use the start/end of hyperlink to select, not move

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Justin L 2025-11-14 16:49:39 UTC
The discussion on this document includes duplicates saying that "we should never drag/drop an entire hyperlink, but just select text like normal". Bug 82700 seems like the cleanest one, so I'll make it the "authority" for that idea.

My patch makes it "more normal" to select the start/end of the hyperlink, because the first half-character and last half-character are no longer treated as "drag-able" parts of the hyperlink.

Since my patch solves the bug's title "Hard to select a hyperlink", I'll mark the bug as FIXED.