tdf#39015 sw: use the start/end of hyperlink to select, not move

Instead of switching into drag-and-drop mode
as soon as the mouse touches the outer edge of the hyperlink,
allow a selection-drag to start
as long as the mouse is over the first half-char/last half-char
of the hyperlink.

SAL_USE_VCLPLUGIN=gen gdb ./instdir/program/soffice.bin

Change-Id: I6e021f327a0f54fcc543fbb7033ff3535953629d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193064
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins